objects/ApplicationForm__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileNumber__c</fullName>
        <label>MobileNumber</label>
        <type>Phone</type>
    </fields>
    <label>ApplicationForm</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ApplicationForm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ApplicationForm</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>